# Projeto_05

./: .flake8  .gitignore  .pre-commit-config.yaml  EXEC_SUMMARY.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  app.py  auto_update.py  codecov.yml  config.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test.txt  test_email.py
.github/workflows/: main.yml
app/: check_database.py  database.py  inspect_excel_columns.py  send_mail_outlook.py  send_mail_smtp.py
docs/: CHANGELOG.md  MONITORING.md  PROJECT_DOCUMENTATION.md  README.md  ROADMAP.md
docs/api/: API_REFERENCE.md
docs/technical/: ARCHITECTURE.md
docs/user/: USER_GUIDE.md
tests/: README.md
tests/integration/: test_send_mail.py
tests/ui/: robot_config.robot
