[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-consulta-lojas"
version = "1.0.0"
description = "Sistema de Consulta de Lojas e Inventário"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "et-xmlfile>=1.1.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "tzdata>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
    "auto-py-to-exe>=2.0.0",
]
security = [
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/projeto_02"
Documentation = "https://github.com/seu-usuario/projeto_02/docs"
Repository = "https://github.com/seu-usuario/projeto_02.git"
Issues = "https://github.com/seu-usuario/projeto_02/issues" 